<resources>
    <string name="app_name">Pug Mark</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="employee_id">Employee ID</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_out">Sign Out</string>
    <string name="emergency">Emergency</string>
    <string name="patrol">Patrol</string>
    <string name="waterhole_data">Waterhole Data</string>
    <string name="add_emergency">Add Emergency</string>
    <string name="emergency_type">Emergency Type</string>
    <string name="emergency_severity">Emergency Severity</string>
    <string name="select_location_here">Select Location Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_emergency_type">Add Emergency Type</string>
    <string name="add_here">Type here</string>
    <string name="end_location_textView">End Location</string>
    <string name="start_location_textView">Start Location</string>
    <string name="data_not_set">Data not Set</string>
    <string name="data">data</string>
    <string name="location_not_set">Location not Set</string>
    <string name="emergency_data_not_set">Emergency Data not Set</string>
    <string name="no_images_found">No images yet</string>
    <string name="invalid_email_pw">Invalid email or password</string>
    <string name="no_emergency_data_yet">No emergency Data yet</string>
    <string name="class_values">class</string>
    <string name="no_patrol_data_yet">No Patrol Data Yet !</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="enter_fields">Enter required fields</string>
    <string name="enter_email_id">Enter Email ID!</string>
    <string name="enter_password">Enter password!</string>
    <string name="min_pw_characters">Enter minimum 6 characters!</string>
    <string name="enter_empId">Enter Employee Id</string>
    <string name="password_short">Password too short, enter minimum 6 characters!</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="no_water_hole_data_yet">No WaterHole Data Yet !</string>
    <string name="start_patrol">Start Patrol</string>
    <string name="end_patrol">End Patrol</string>
    <string name="add_water_hole">Add Water Hole</string>
    <string name="add_name_here">Add Name Here...</string>
    <string name="select_location">Select Location</string>
    <string name="update_waterhole_data">Update WaterHole Data</string>
    <string name="update">Update</string>
    <string name="image">image</string>
    <string name="priority">Priority:&#160;</string>
    <string name="hyphen">&#160;-&#160;</string>
    <string name="employee_id_style">Employee ID:&#160;</string>
    <string name="name_style">Name:&#160;</string>
    <string name="patrol_time">Patrol time:&#160;</string>
    <string name="level">Level:&#160;</string>
    <string name="last_updated">Last Updated:&#160;</string>
    <string name="updated_by">Updated By:&#160;</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="new_waterhole">New Waterhole</string>
    <string name="emptyString">&#160;</string>
</resources>
