<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:background="@color/colorBackground"
    android:scrollbars="horizontal">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="sdsu.cs.nikhil.pugmark.AddWaterHoleActivity">

    <TextView
        android:id="@+id/addWaterHoleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/add_water_hole"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/waterHoleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:inputType="textCapWords"
        android:padding="16dp"
        android:hint="@string/add_name_here"/>

    <Spinner
        android:id="@+id/spinnerWaterLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp" />

    <Button
        android:id="@+id/submitWaterHole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:textColor="@color/colorWhite"
        android:layout_margin="32dp"
        android:text="@string/submit" />
</LinearLayout>
</ScrollView>