<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_in_adapter"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/list_emergencyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority" />

            <TextView
                android:id="@+id/list_emergencySeverity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen" />

            <TextView
                android:id="@+id/list_empid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/emptyString" />

            <TextView
                android:id="@+id/list_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:visibility="gone" />

        <TextView
            android:id="@+id/list_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>