<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_in_adapter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_directions_walk_black_24px"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/patrol_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        <TextView
            android:id="@+id/patrol_empid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patrol_date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/patrol_start_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/patrol_end_time"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/patrol_time"
                android:text="@string/patrol_time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/emptyString"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/patrol_time_diff"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>